Revision history for Gtk3::Notify.pm

0.02

* Add tests
* Do not use PREREQ_FATAL (CPAN RT#116732)

0.01 Sun Oct 29 14:42:05 2017
    First version, released on an unsuspecting world.